k8-manifest/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
  namespace: olumoko-voting-app
  labels:
    name: postgres-deploy
    app: demo-voting-app
spec:
  replicas: REPLICAS_PLACEHOLDER
  selector:
    matchLabels:
      name: postgres-pod
      app: demo-voting-app
  template:
    metadata:
      name: postgres-pod
      labels:
        name: postgres-pod
        app: demo-voting-app
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: olumoko-voting-app
  labels:
     name: postgres-service
     app: demo-voting-app
spec:
   ports:
     - port: 5432
       targetPort: 5432
   selector:
     name: postgres-pod
     app: demo-voting-app
