k8-manifest/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  namespace: olumoko-voting-app
  labels:
    name: redis-deploy
    app: demo-voting-app
spec:
  replicas: REPLICAS_PLACEHOLDER
  selector:
    matchLabels:
      name: redis-pod
      app: demo-voting-app
  template:
    metadata:
      name: redis-pod
      labels:
        name: redis-pod
        app: demo-voting-app
    spec:
      containers:
        - name: redis
          image: redis
          ports:
          - containerPort: 6379
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: olumoko-voting-app
  labels:
     name: redis-service
     app: demo-voting-app
spec:
   ports:
     - port: 6379
       targetPort: 6379
   selector:
     name: redis-pod
     app: demo-voting-app
         

# env:
#           - name: REDIS_HOST
#             valueFrom:
#               secretKeyRef:
#                 name: redis-secret
#                 key: REDIS_HOST
#           - name: REDIS_PORT
#             value: "6379"
