k8-manifest/result-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app-deploy
  namespace: olumoko-voting-app
  labels:
    name: result-app-pod
    app: demo-voting-app
spec:
  replicas: REPLICAS_PLACEHOLDER
  selector:
    matchLabels:
      name: result-app-pod
      app: demo-voting-app
  template:
    metadata:
      name: result-app-pod
      labels:
        name: result-app-pod
        app: demo-voting-app
    spec:
      containers:
        - name: result-app
          image: aries5533/result:latest #kodekloud/examplevotingapp_result:v1 
          ports:
          - containerPort: 80
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"

---

apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: olumoko-voting-app
  labels:
     name: result-service
     app: demo-voting-app
  #annotations:
  #  service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing" # Specifies public LoadBalancer
spec:
   type: NodePort #LoadBalancer
   ports:
     - port: 80
       targetPort: 80
   selector:
     name: result-app-pod
     app: demo-voting-app
