k8-manifest/voting-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-deploy
  namespace: olumoko-voting-app
  labels:
    name: voting-app-pod
    app: demo-voting-app
spec:
  replicas: REPLICAS_PLACEHOLDER
  selector:
    matchLabels:
      name: voting-app-pod
      app: demo-voting-app
  template:
    metadata:
      name: voting-app-pod
      labels:
        name: voting-app-pod
        app: demo-voting-app
    spec:
      containers:
        - name: voting-app
          image: aries5533/vote:latest  #kodekloud/examplevotingapp_vote:v1
          ports:
          - containerPort: 80
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"

---

apiVersion: v1
kind: Service
metadata:
  name: voting-service
  namespace: olumoko-voting-app
  labels:
    name: voting-service
    app: demo-voting-app
  #annotations:
  #  service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing" # Specifies public LoadBalancer
spec:
  type: NodePort #LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: voting-app-pod
    app: demo-voting-app
